# geany-tweaks-ui

./: Makefile.am  README.rst  autogen.sh  configure.ac  version.sh
geany-plugins/tweaks-ui/: configure.ac
src/: tkui_colortip.h  tkui_column_markers.cc  tkui_main.cc  tkui_settings.h
tweaks-ui/: .gitignore  Makefile.am  README  README.md  configure.ac
tweaks-ui/data/: tweaks-ui.conf
tweaks-ui/src/: Makefile.am  ao_colortip.c  ao_colortip.h  ao_markword.c  ao_markword.h  plugin.cc  plugin.h  prefs.cc  prefs.h  tkui_addon.h  tkui_addons.h  tkui_auto_read_only.cc  tkui_auto_read_only.h  tkui_colortip.cc  tkui_colortip.h  tkui_column_markers.cc  tkui_column_markers.h  tkui_detect_filetype.cc  tkui_hide_menubar.cc  tkui_hide_menubar.h  tkui_main.cc  tkui_main.h  tkui_markword.cc  tkui_markword.h  tkui_settings.cc  tkui_settings.h  tkui_sidebar_auto_position.cc  tkui_sidebar_auto_position.h  tkui_sidebar_save_position.cc  tkui_sidebar_save_position.h  tkui_unchange_document.cc  tkui_unchange_document.h  tkui_window_geometry.cc  tkui_window_geometry.h
